added contact email

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div id="congrats" class = "noShow"></div>
         
-  <br><br><footer>Alyssa Jarrell, CIS 228, Prof. Liss, Spring 2022</footer>
+  <br><br><footer>Created by Alyssa Jarrell, jarrell.alyssa@gmail.com</footer>
 
 
 </body>
